Bug 108408 - Dragging artists starting with the from collection browser to playlist does nothing
Summary: Dragging artists starting with the from collection browser to playlist does n...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-07-01 17:54 UTC by Laszlo Pandy
Modified: 2006-06-11 12:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laszlo Pandy 2005-07-01 17:54:15 UTC
Version:           1.3SVN (using KDE KDE 3.3.2)
Installed from:    Mandriva RPMs
OS:                Linux

Since the recent change in the handling of artists which begin with "The", dragging from the collection browser is now partially broken. In my collection browser The Beatles is listed as "Beatles, The". I can drag other artists from the collection browser, but when I try to drag "Beatles, The" is does nothing and the status bar reads: "Attempted to insert nothing into the playlist." I assume amarok is querying the database for "Beatles, The" instead of "The Beatles" only to find it doesn't exist.
Comment 1 Laszlo Pandy 2005-07-01 17:55:33 UTC
Oh, oops. This version is actually compiled from the SVN as of when this bug was reported.
Comment 2 Seb Ruiz 2005-07-02 01:54:52 UTC
SVN commit 430619 by seb:

'the' manipulation broke dragging

BUG:108408


 M  +46 -13    collectionbrowser.cpp  
 M  +0 -1      playlistbrowser.cpp