'the' manipulation broke dragging

BUG:108408

svn path=/trunk/extragear/multimedia/amarok/; revision=430619