src/playlistbrowser.cpp
@@ -1780,7 +1780,6 @@ void PlaylistBrowserView::contentsDropEvent( QDropEvent *e )
                     PlaylistBrowser *pb = PlaylistBrowser::instance();
                     pb->createPlaylist( false );
                     pb->m_lastPlaylist->insertTracks( 0, list, map );
-//                     pb->savePlaylist( pb->m_lastPlaylist );
                 }
             }
         }
